--- a/Models/-SVC/2024.01.03_CoMoSVC.md
+++ b/Models/-SVC/2024.01.03_CoMoSVC.md
@@ -309,3 +309,90 @@ We first sample the noise that has the same shape as the mel-spectrogram by $\ma
 The proposed CoMoSVC also supports multi-step sampling by chaining the outputs at multiple time steps.
 
 However, there will be a trade-off between the number of iterations and sampling quality.
+
+## 4·Experiments
+
+### Experimental Setup
+
+We conduct our experiment on two open-source datasets, which are M4Singer  [^Zhang2022M4singer] and OpenSinger  [^Huang2021Multi-Singer], respectively.
+
+The former dataset has 29.77 hours of singing voice and 20 singers, and the latter one contains 50 hours and 66 singers.
+
+All the audios are resampled to 24kHz and normalized.
+
+Then we calculate the volume feature, extract the F0 curve along with the voiced/unvoiced flag for each frame by using DIO  [^Morise2009Fast] and the 768-dimensional content feature from the 12th layer by utilizing ContentVec [^Qian2022Content{Vec].
+
+All these features are projected to 256 dimensions and then concatenated as the conditional input for the decoding stage.
+
+We use the vocoder\footnote{https://github.com/M4Singer/M4Singer/tree/master/code} pre-trained with singing voice from M4singer [^Zhang2022M4singer], and the mel-spectrograms are computed with 512-point fast Fourier transform (FFT), 512-point window size and 128-point hop size with 80 frequency bins. 
+
+All the models are trained for 1 million iterations on a single NVIDIA GTX4090 GPU with a batch size of 48, with learning rates as 1e-4 and 5e-5 respectively and the optimizer is AdamW. 
+
+We first conduct the reconstruction experiment to evaluate the capabilities of different decoding stages in the autoencoding settings.
+
+Then two sets of experiments are conducted for any-to-many SVC task, a) train on the OpenSinger dataset for the target singer and use M4singer as the source for conversion ; b) train on the M4singer dataset for the target singer and use OpenSinger as the source for conversion.
+
+Moreover, we increase the sampling steps of CoMoSVC and conduct the conversion experiments to evaluate the effect of sampling steps.
+
+### Baselines
+
+We compare the proposed CoMoSVC with the SOTA SVC methods, including: 
+
+-  SoVITS-Flow: The flow version of SoVITS-SVC\footnote{https://github.com/svc-develop-team/so-vits-svc?tab=readme-ov-file\#sovits-model}.
+
+-  SoVITS-Diff: The diffusion version of SoVITS-SVC\footnote{{https://github.com/svc-develop-team/so-vits-svc?tab=readme-ov-file\#diffusion-model-optional}}.
+
+The number of diffusion steps is 1000.
+
+-  DiffSVC [^Liu2021Diffsvc]: The first SVC method based on the diffusion model, and the number of steps is 100.
+
+The same feature embeddings and training details as described in Sec.~4.1 are used for the baseline methods for fair comparison.
+
+### Evaluation
+
+We evaluate the reconstruction ability of different methods by objective metrics and the conversion ability by both subjective and objective metrics.
+
+For the subjective test, we invited 12 volunteers to give Mean Opinion Score (MOS) on naturalness and similarity on the converted audios.
+
+Real-Time Factor (RTF), Character Error Rate (CER) obtained by Whisper [^Radford2023Robust] and speaker SIMilarity (SIM) calculated by the cosine distance between the speaker embeddings \footnote{https://github.com/Jungjee/RawNet} are used as the objective metrics for SVC evaluation.
+
+Since the flow version SoVITS-SVC is end-to-end and the other methods are two-stage, we use the time ratio of transforming embeddings into latent representations (Flow) / mel-spectrograms (Others) to the duration of audio to represent RTF for clear comparison. 
+For reconstruction, F0 Pearson correlation coefficient (FPC) \footnote{{https://github.com/open-mmlab/Amphion/blob/main/evaluation/metrics/f0/}} and PESQ [^({Itu-T})2001Perceptual] are used additionally for evaluation.
+
+<a id="table1">Objective Evaluations for Reconstruction</a>
+
+<a id="table2">Objective Evaluations for SVC, where "M'' and "O'' in the SVC setting row stands for M4Singer and OpenSinger, respectively.</a>
+
+#### Reconstruction
+
+As illustrated in Table.~[table1](#table1), the teacher model outperforms all the models in all the metrics.
+
+Similarly, CoMoSVC outperforms all the baselines in all metrics except for similarity, where it achieves comparable results.
+
+This indicates the outstanding generative ability of the decoding stage of CoMoSVC with only one step, which is hundreds or thousands of times fewer than all the baselines.
+
+#### SVC Performances
+
+We conduct two sets of SVC experiments as described in section.~4.1 and the source audios are all unseen during training.
+
+As illustrated by CER and SIM in Table.~[table2](#table2), CoMoSVC performs comparably to all the baselines.
+
+The subjective evaluations in Table.~[table3](#table3) reveal that CoMoSVC achieves comparable naturalness to the diffusion-based SVC methods.
+
+Furthermore, the similarity of CoMoSVC exceeds that of all the baselines in both experiments, demonstrating an improvement of at least 0.05 to diffusion-based SVC methods.
+
+Moreover, both the naturalness and similarity of CoMoSVC show an increment of approximately 1 compared to the flow version SoVITS-SVC.
+
+As to the inference speed, the RTF of CoMoSVC is 0.002 smaller than that of the flow version SoVITS-SVC.
+
+In comparison with the diffusion-based SVC methods, CoMoSVC is more than 45 times faster than DiffSVC and almost 500 times faster than the diffusion-version SoVITS-SVC.
+
+<a id="table3">Subjective Evaluations for SVC, where, as an example, M4Singer$\to$OpenSinger means converting the singing voices from the M4Singer to target timbres in the OpenSinger.</a>
+
+<a id="table4">Evaluations for Effect of Sampling Steps, where the number in the method name represents the number of sampling steps.</a>
+
+#### Effect of Sampling Steps
+
+In general, as the number of sampling steps increases, there is a small increment in the metrics presented in Table~[table4](#table4).
+
+The slight improvement and minor fluctuation indicates that CoMoSVC already achieves accurate score estimation through only one-step discretization yielding high-quality results.
