--- a/Models/-SVC/2024.01.03_CoMoSVC.md
+++ b/Models/-SVC/2024.01.03_CoMoSVC.md
@@ -396,3 +396,19 @@ In comparison with the diffusion-based SVC methods, CoMoSVC is more than 45 time
 In general, as the number of sampling steps increases, there is a small increment in the metrics presented in Table~[table4](#table4).
 
 The slight improvement and minor fluctuation indicates that CoMoSVC already achieves accurate score estimation through only one-step discretization yielding high-quality results.
+
+## 5·Conclusion
+
+In this paper, we propose the CoMoSVC, which is based on the consistency model to achieve high-quality, high-similarity and high-speed SVC.
+
+The proposed CoMoSVC is a two-stage model where the first stage encodes the features from the waveform, then the second stage utilizes a student model distilled from a pre-trained teacher model to generate converted audios.
+
+The comprehensive subjective and objective evaluations demonstrate the effectiveness of CoMoSVC.
+
+\section*{Acknowledgments}
+
+The research was supported by the Theme-based Research Scheme (T45-205/21-N) and Early Career Scheme (ECS-HKUST22201322), Research Grants Council of Hong Kong.
+\bibliographystyle{plainnat}
+\bibliography{ust_ref}
+
+\end{document}
