--- a/Models/-SVC/2024.01.03_CoMoSVC.md
+++ b/Models/-SVC/2024.01.03_CoMoSVC.md
@@ -412,3 +412,27 @@ The research was supported by the Theme-based Research Scheme (T45-205/21-N) and
 \bibliography{ust_ref}
 
 \end{document}
+
+## References
+
+[^Zhang2023Leveraging]: Leveraging Content-Based Features From Multiple Acoustic Models for Singing Voice Conversion. arXiv:2310.11160.
+[^Kobayashi2014Statistical]: Statistical Singing Voice Conversion With Direct Waveform Modification Based on the Spectrum Differential. Proc. InterSpeech 2014.
+[^Kobayashi2015Statistical]: Statistical Singing Voice Conversion Based on Direct Waveform Modification With Global Variance. Proc. InterSpeech 2015.
+[^Kobayashi2015Statistical]: Statistical Singing Voice Conversion Based on Direct Waveform Modification and Its Parameter Generation Algorithms. IEICE Tech. Rep. 2015.
+[^Nachmani2019Unsupervised]: Unsupervised Singing Voice Conversion. Proc. InterSpeech 2019.
+[^Deng2020Pitchnet]: Pitchnet: Unsupervised Singing Voice Conversion With Pitch Adversarial Network. Proc. Intl. Conf. On Acoustics, Speech, and Signal Processing ({ICASSP}) 2020.
+[^Polyak2020Unsupervised]: Unsupervised Cross-Domain Singing Voice Conversion. Proc. InterSpeech 2020.
+[^Liu2021Fast{SVC]: Fast{SVC}: Fast Cross-Domain Singing Voice Conversion With Feature-Wise Linear Modulation. Proc. Intl. Conf. Multimedia and Expo ({ICME}) 2021.
+[^SVC-Develop-Team2023SoftVC]: SoftVC VITS Singing Voice Conversion. GitHub Repository 2023.
+[^Liu2021Diffsvc]: Diffsvc: A Diffusion Probabilistic Model for Singing Voice Conversion. Proc. IEEE Workshop on Automatic Speech Recognition and Understanding ({ASRU}) 2021.
+[^Song2023Consistency]: Consistency Models. Proc. Intl. Conf. Machine Learning (ICML) 2023.
+[^Ye2023CoMoSpeech]: CoMoSpeech: One-Step Speech and Singing Voice Synthesis via Consistency Model. Proc. ACM Int. Conf. On Multimedia ({ACM MM}) 2023.
+[^Karras2022Elucidating]: Elucidating the Design Space of Diffusion-Based Generative Models. Proc. Conf. On Neural Information Processing Systems (NeurIPS) 2022.
+[^Song2021Score-Based]: Score-Based Generative Modeling Through Stochastic Differential Equations. Proc. Intl. Conf. On Learning Representations ({ICLR}) 2021.
+[^Qian2022Content{Vec]: Content{Vec}: An Improved Self-Supervised Speech Representation by Disentangling Speakers. Proc. Intl. Conf. Machine Learning (ICML) 2022.
+[^Morise2009Fast]: Fast and Reliable F0 Estimation Method Based on the Period Extraction of Vocal Fold Vibration of Singing Voice and Speech. Audio Engineering Society Conference: 35th International Conference: Audio for Games 2009.
+[^Rethage2018Wavenet]: A Wavenet for Speech Denoising. Proc. Intl. Conf. On Acoustics, Speech, and Signal Processing ({ICASSP}) 2018.
+[^Zhang2022M4singer]: M4singer: A Multi-Style, Multi-Singer and Musical Score Provided Mandarin Singing Corpus. Proc. Conf. On Neural Information Processing Systems (NeurIPS) 2022.
+[^Huang2021Multi-Singer]: Multi-Singer: Fast Multi-Singer Singing Voice Vocoder With a Large-Scale Corpus. Proc. ACM Int. Conf. On Multimedia ({ACM MM}) 2021.
+[^Radford2023Robust]: Robust Speech Recognition via Large-Scale Weak Supervision. Proc. Intl. Conf. Machine Learning (ICML) 2023.
+[^({Itu-T})2001Perceptual]: Perceptual Evaluation of Speech Quality ({PESQ}), an Objective Method for End-to-End Speech Quality Assessment of Narrowband Telephone Networks and Speech Codecs. 
