--- a/Models/-SVC/2021.05.28_DiffSVC.md
+++ b/Models/-SVC/2021.05.28_DiffSVC.md
@@ -90,3 +90,61 @@ Section~[sec3](#sec3) introduces the diffusion probabilistic model.
 Details of the proposed DiffSVC system are presented in Section~[sec4](#sec4).
 
 Experimental results are shown in Section~[sec5](#sec5) and Section~[sec6](#sec6) concludes this paper.
+
+## 2·Related Work
+
+\label{sec2}
+
+### Singing Voice Conversion
+
+Current SVC approaches can be categorized into two classes, i.e., parallel SVC and non-parallel SVC, in terms of whether parallel training data is required.
+
+Most initial attempts for SVC are within the parallel SVC paradigm.
+
+These approaches model parallel training samples using statistical methods, such as Gaussian mixture model (GMM)-based many-to-many eigenvoice conversion [^Toda2007One-to-Many], direct waveform modification based on spectrum difference [^Kobayashi2014Statistical], [^Kobayashi2015Statistical].
+
+GAN-based parallel approach has also been proposed to improve conversion performance [^Sisman2019Singan].
+
+Since parallel SVC approaches require parallel data, which is expensive to collect, for the training process, researchers have investigated many non-parallel SVC approaches.
+
+Auto-encoder based on the WaveNet [^Oord2016Wavenet] structure has been used for unsupervised SVC in [^Nachmani2019Unsupervised], which can convert among singers appeared in the training set.
+
+This approach adopts an adversarial speaker classifier to disentangle singer information from the encoder output.
+
+To further improve this method, an additional pitch adversarial mechanism is added to remove pitch information from the encoder output in [^Deng2020Pitchnet].
+
+Variational auto-encoder (VAE) [^Luo2020Singing], variational autoencoding Wasserstein GAN (VAW-GAN) [^Lu2020Vaw-Gan], and phonetic posteriorgram (PPG) models [^Li2021PPG-Based] are also investigated for non-parallel SVC.
+
+Very recently, the combination of a PPG model and a waveform generator achieves promising SVC performance [^Polyak2020Unsupervised], [^Liu2021FastSVC].
+
+### Diffusion Probabilistic Models
+
+There are two streams of efforts, pushing the research on diffusion probabilistic models forward.
+
+One is research on the score matching model, which originates from [^Hyv{{\"a}}rinen2005Estimation], where the problem of data density estimation is simplified into a score matching problem (the estimation of the gradient of the data distribution density).
+
+The other is research on denoising diffusion probabilistic model, which originates from [^Sohl-Dickstein2015Deep], where a diffusion Markov chain is used to destroy data structure into Gaussian noise and another reverse process is used to generate data from Gaussian noise.
+
+Recently, great progress has been made in these two streams.
+
+In [^Ho2020Denoising], the diffusion model has been able to generate high-quality images.
+
+Slightly later, the diffusion model also makes it to generate high-quality audio samples [^Kong2020Diffwave], [^Chen2020WaveGrad].
+
+On the other hand, score matching model has also been proved to be capable of generating high-resolution images using a neural network to estimate the log gradient of the target data probabilistic density function [^Song2019Generative].
+
+Afterwards, a unified framework is proposed in [^Song2021Score-Based], which generalizes and improves previous work on score matching model through the lens of stochastic differential equations (SDEs).
+
+The diffusion model in [^Ho2020Denoising] and the score matching model in [^Song2019Generative] have been shown to be special cases under such framework.
+
+![](figs/diffusion_process.pdf)
+
+<a id="fig:diff_process">Graphical model for the reverse process and the diffusion/forward process in a diffusion probabilistic model.
+
+The diffusion/forward process (dotted arrow) gradually converts data into noise within finite steps.
+
+The reverse process (solid arrow) is a parametric procedure which attempts to restore data structure from noise.</a>
+
+![](figs/DiffSVC-model.pdf)
+
+<a id="fig:sys_overview">Schematic diagram of the conversion model in the proposed DiffSVC system, based on the diffusion probabilistic model.</a>
