--- a/Models/-SVC/2021.05.28_DiffSVC.md
+++ b/Models/-SVC/2021.05.28_DiffSVC.md
@@ -242,3 +242,111 @@ $$
 where $\sigma_t^2=\frac{1-\bar{\alpha}_{t-1}}{1-\bar{\alpha}_t}\beta_t$, $z\sim\mathcal{N}(0,I)$ for $t>1$ and $z=0$ for $t=1$.
 
 The final $y_0$ is the generated data.
+
+## 4·DiffSVC
+
+\label{sec4}
+
+In this section, we describe how we introduce the diffusion model to SVC and present details of the proposed DiffSVC system.
+
+We regard the content, melody and loudness information as the most important components in a singing signal for the task of singing voice conversion.
+
+In DiffSVC, we train a Deep-FSMN (DFSMN)-based ASR acoustic model [^Zhang2018Deep-FSMN] to extract PPGs as the content features with forced-aligned audio-text speech data.
+
+We train the ASR model with frame-wise cross-entropy loss, where the ground-truth labels are phonemes (i.e., initials and finals with tone) for Mandarin Chinese SVC.
+
+We introduce the concept of denoising diffusion modeling into the conversion model in DiffSVC.
+
+The overall architecture is depicted in Fig.~[fig:sys_overview](#fig:sys_overview).
+
+During the training process, DiffSVC aims at predicting the isotropic Gaussian noise $\epsilon$ from the noisy mel spectrogram $y_t$ and the step variable $t$, leveraging additional information from PPG $x$, logarithmic fundamental frequency feature (Log-F0) $f_0$ and loudness feature $l$.
+
+We introduce the details in the following subsections.
+
+### PPG, Log-F0 and Loudness
+
+The PPG prenet adopts a simple fully-connected (FC) layer on the PPG input.
+
+DiffSVC represents the melody of a singing signal using its fundamental frequency contour in logarithmic scale.
+
+A-weighting mechanism of a singing signal's power spectrum is adopted to compute loudness features, following [^Liu2021FastSVC].
+
+We process the Log-F0 features and loudness features in the same way.
+
+The Log-F0 features and loudness features are first quantized into 256 bins, and then go through a melody embedding lookup table and a loudness embedding lookup table respectively. 
+The processed PPG features, Log-F0 features and loudness features are added elementwisely to obtain the conditioner $e$, which is token as additional input to the diffusion decoder.
+
+### Diffusion Modeling
+
+**Step Encoding**.
+
+The diffusion step variable $t$ is an important input to a diffusion model, because it indicates the amount of noise added to the noisy mel spectrogram $y_t$.
+
+Following the setting in [^Kong2020Diffwave], we first convert integral-valued $t$ into an 128-dimensional vector $t_{emb}$ with a sinusoidal position encoding as:
+
+$$
+[\sin(10^{\frac{0\times4}{63}}t), ..., \sin(10^{\frac{63\times4}{63}}t), \cos(10^{\frac{0\times4}{63}}t), ..., \cos(10^{\frac{63\times4}{63}}t)]
+$$
+
+Then we further process $t_{emb}$ with two FC layers and Swish activation function [^Ramachandran2017Searching]. \\
+**Diffusion Decoder**.
+
+The diffusion decoder is trained to predict the noise $\epsilon$ added by the diffusion process from the noisy mel spectrogram $y_t$ and the step variable $t$, taking auxiliary conditioners $e$ obtained from PPG $x$, Log-F0 $f_0$ and loudness $l$.
+
+Following [^Kong2020Diffwave], the diffusion decoder in DiffSVC adopts a bidirectional residual convolutional architecture proposed in [^Oord2016Wavenet] with a slight difference.
+
+We use dialtion rate of 1 since we work on mel spectrograms instead of raw waveform.
+
+The receptive field of the diffusion decoder is sufficiently large with a dilation rate of 1.
+
+The diffusion decoder first conducts an one-dimensional convolutional operation with kernel-size 1 (Conv1x1) on the noisy mel spectrogram and then adopts the ReLU activation on the output.
+
+The output of the step encoder is added to every time step of the mel spectrogram feature maps, and then fed into $N$ residual blocks.
+
+The conditioner $e$ is imported into every residual block with separate Conv1x1 layers, whose output is elementwisely added with the mel spectrogram and step features.
+
+Then the gated mechanism introduced in [^Oord2016Wavenet] are used to further process the feature maps.
+
+We sum the skip connections from all the $N$ residual layers and further process with two Conv1x1 layers interleaved with a ReLU activation to get the diffusion decoder output. \\
+**Training and conversion**
+
+We summarize the training procedure of the conversion model in DiffSVC in Algorithm~[alg:training](#alg:training) and the conversion procedure in Algorithm~[alg:conversion](#alg:conversion), respectively.
+
+\begin{algorithm}[h]
+\caption{Training procedure of the conversion model in DiffSVC.}
+
+\begin{algorithmic}[1]
+\label{alg:training}
+\REQUIRE The conversion model $\epsilon_\theta(\cdot)$; the training set $\mathcal{D}_{train}=\{(x, f0, l, y_0)\}_{m=1}^M$; $N_{iter}$ training iterations.
+\FOR{$i=1,2,...,N_{iter}$}
+\STATE Sample $(x, f_0, l, y_0)$ from $\mathcal{D}_{train}$;
+\STATE $\epsilon\sim\mathcal{N}(0,I)$;
+\STATE Sample $t\sim$ Uniform$(\{1, \cdots, T\})$;
+\STATE Take gradient descent step on \\ \quad$\nabla_\theta||\epsilon-\epsilon_\theta(\sqrt{\bar\alpha_t}y_0+\sqrt{1-\bar\alpha_t}\epsilon, t, x, f_0, l))||_2^2$;
+\ENDFOR
+\RETURN $\epsilon_\theta(\cdot)$;
+\end{algorithmic}
+
+\end{algorithm}
+
+\begin{algorithm}[h]
+\caption{Conversion procedure of DiffSVC.}
+
+\begin{algorithmic}[1]
+\label{alg:conversion}
+\REQUIRE The trained conversion model $\epsilon_\theta(\cdot)$; one testing sample $(x, f0, l)$.
+\STATE Sample $y_T\sim\mathcal{N}(0,I)$;
+\FOR{$t=T,T-1,...,1$}
+\STATE Sample $(x, f_0, l, y_0)$ from $\mathcal{D}$;
+\STATE $\epsilon\sim\mathcal{N}(0,I)$;
+\IF{$t>1$}
+\STATE Sample $z\sim\mathcal{N}(0, I)$;
+\ELSE
+\STATE $z=0$;
+\ENDIF
+\STATE $y_{t-1} = \frac{1}{\sqrt{\alpha_t}}(y_t - \frac{1-\alpha_t}{\sqrt{1-\bar{\alpha}_t}}\epsilon_\theta(y_t, t, x, f_0, l))+\sigma_t z$, as in Eq.~[eq:sample](#eq:sample);
+\ENDFOR
+\RETURN $y_0$;
+\end{algorithmic}
+
+\end{algorithm}
